--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Babble</title>
-    <script src="js/index.js" defer></script>
-  </head>
-  <body>
-    <div id="root">
-    </div>
-  </body>
-</html>
+Hello world
